<resources>
    <string name="app_name">NewMotivate</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="empty_field_err">Please fill this field</string>
    <string name="next_step">Next step</string>
    <string name="edit_btn">Edit</string>
    <string name="loading">loading</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="remind_me">Remind Me</string>
    <string name="remind_date_and_time">Reminder set for %1$s, %2$s %3$s</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">The date you entered is in the past</string>
    <string name="todo_error">Please enter a Todo</string>
    <string name="about">About</string>
    <string name="snooze">Snooze</string>
    <string-array name="snooze_options">
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>
    <string name="no_to_dos">You don\'t have any todos</string>
    <string name="remove">Remove</string>
    <string name="done_label">Done</string>
    <string name="is_dark_theme">Dark theme</string>
    <string name="repeat">Repeat</string>
    <string name="quantity">Quantity</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="select_a_date">Select a date</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_every">Repeat every...</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_step">Add step</string>
    <string name="step">Step</string>
    <string name="no_repeat">No Repeat</string>
    <string name="daily">Daily</string>
    <string name="custom">Custom</string>
    <string name="every_weekday">Every Weekday (Mon-Fri)</string>
    <string name="step_deleted">Step deleted</string>
    <string name="undo">UNDO</string>
    <string name="without_date">Without Date</string>
    <string name="someday">Someday</string>
    <string name="add_tag">Add Tag</string>
    <string name="tags">Tags</string>
    <string name="delete">Delete</string>
    <string name="enter_tag">Enter tag</string>
    <string name="create">Create</string>
    <string name="empty">empty</string>
    <string name="title_is_empty">Title is empty</string>

    <string-array name="repeat_list">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="short_days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="quantity_array">
        <item>times</item>
        <item>hour</item>
        <item>min</item>
        <item>kg</item>
        <item>km</item>
        <item>liter</item>
    </string-array>

    <string-array name="priority_array">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
        <item>No Priority</item>
    </string-array>

</resources>
