<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repeat_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/spacing_16"
    android:paddingTop="@dimen/spacing_16"
    android:paddingEnd="@dimen/spacing_16"
    android:paddingBottom="@dimen/spacing_8">

    <RadioButton
        android:id="@+id/repeat_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/spacing_16"
        android:text="@string/no_repeat"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/repeat_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/spacing_16"
        android:text="@string/daily"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/repeat_every_weekday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/spacing_16"
        android:text="@string/every_weekday"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/repeat_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/spacing_16"
        android:text="@string/custom"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />
</RadioGroup>
