<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editTextParentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/todo_title_text_input_layout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                    <EditText
                        android:id="@+id/todo_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:gravity="start|bottom"
                        android:hint="@string/title"
                        android:inputType="textAutoCorrect|textCapSentences"
                        android:lines="2"
                        android:maxLength="30"
                        android:maxLines="3"
                        android:textColor="@color/white">

                        <requestFocus />
                    </EditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/spacing_36"
                    android:layout_marginTop="@dimen/spacing_30"
                    android:layout_marginRight="@dimen/spacing_36"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/reminder_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/spacing_8"
                        app:srcCompat="@drawable/ic_add_alarm_white_24dp" />

                    <TextView
                        android:id="@+id/reminder_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="@dimen/spacing_8"
                        android:text="@string/remind_me"
                        android:textSize="16sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/reminder_switch_material"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/spacing_8" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reminder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/spacing_36"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:layout_marginRight="@dimen/spacing_36"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/reminder_date_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textIsSelectable="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/spacing_4"
                        android:text="/"
                        android:textColor="?attr/colorAccent"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/reminder_time_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textIsSelectable="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/spacing_36"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:layout_marginRight="@dimen/spacing_36"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/repeat_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/spacing_8"
                        app:srcCompat="@drawable/ic_repeat_white_24dp" />

                    <TextView
                        android:id="@+id/repeat_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="@dimen/spacing_8"
                        android:text="@string/repeat"
                        android:textSize="16sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/repeat_switch_material"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/spacing_8" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/repeat_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/spacing_36"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:layout_marginRight="@dimen/spacing_36"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/repeat_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textIsSelectable="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/spacing_36"
                    android:layout_marginTop="@dimen/spacing_16"
                    android:layout_marginRight="@dimen/spacing_36"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/duration_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/spacing_8"
                        app:srcCompat="@drawable/ic_clock_white_24dp" />

                    <TextView
                        android:id="@+id/duration_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:padding="@dimen/spacing_8"
                        android:text="@string/duration"
                        android:textSize="16sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/duration_switch_material"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/spacing_8" />

                </LinearLayout>

                <!--this layouts compensates for the reminder_layout when the second one disappears-->
                <LinearLayout
                    android:id="@+id/disappearing_reminder_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:id="@+id/disappearing_repeat_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:orientation="horizontal"
                    android:visibility="gone"/>
                <LinearLayout
                    android:id="@+id/disappearing_duration_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:orientation="horizontal" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/makeToDoFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:fabSize="normal"
            app:layout_anchor="@id/editTextParentLinearLayout"
            app:layout_anchorGravity="bottom|right"
            app:srcCompat="@drawable/ic_send_white_24dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
